snapcraft.yaml: use snapcraft's hook generation instead of command-chain
Using command-chain here is a bit side-stepping snapcraft and using the wrapper
anyways, but we don't need the wrapper for our Go app anyways so we can just get
rid of it in a follow-up commit and have a cleaner snap.

This requires staging the hooks dir into $SNAPCRAFT_PRIME/snap using the dump
plugin.

Signed-off-by: Ian Johnson <ian.johnson@canonical.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -9,8 +9,6 @@ confinement: strict
 
 hooks:
   install:
-    command-chain:
-      - snap/command-chain/snapcraft-runner
     plugs:
       - network
 
@@ -26,6 +24,9 @@ apps:
         listen-stream: 80
 
 parts:
+  hooks:
+    source: snap-hooks
+    plugin: dump
   my-part:
     build-environment:
       - CGO_ENABLED: "0"
